@@ -4,6 +4,7 @@
 	bugfix: Cisco connector: tolerate switch ports in suspended state
 	bugfix: nameless object in link list could not be clicked
 	bugfix: fix SQL tables structure
+	bugfix: Live VLANs displayed VLANs missing from switch table improperly
 	update: corrected some dictionary entries
 	update: better layout for Live VLANs tab
 	new feature: UI option to control asset tag warning
